--- a/client/admin/users/list.component.html
+++ b/client/admin/users/list.component.html
@@ -4,19 +4,25 @@
     <h1 class="h2">Users</h1>
   </div>
   <app-shared-list type="users">
-    <thead>
-      <tr>
-        <th>Last Name</th>
-        <th>First Name</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <ng-template let-record="record">
-      <tr>
-        <td><a [routerLink]="['/users', record.id]">{{record.lastName}}</a></td>
-        <td><a [routerLink]="['/users', record.id]">{{record.firstName}}</a></td>
-        <td><a [routerLink]="['/users', record.id]">{{record.email}}</a></td>
-      </tr>
-    </ng-template>
+    <div class="table-responsive">
+      <table class="table table-striped table-sm">
+        <thead>
+          <tr>
+            <th>Last Name</th>
+            <th>First Name</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <ng-template let-record="record">
+            <tr>
+              <td><a [routerLink]="['/users', record.id]">{{record.lastName}}</a></td>
+              <td><a [routerLink]="['/users', record.id]">{{record.firstName}}</a></td>
+              <td><a [routerLink]="['/users', record.id]">{{record.email}}</a></td>
+            </tr>
+          </ng-template>
+        </tbody>
+      </table>
+    </div>
   </app-shared-list>
 </div>
