--- a/client/shared/components/list.component.html
+++ b/client/shared/components/list.component.html
@@ -1,9 +1,1 @@
-<div class="table-responsive">
-  <table class="table table-striped table-sm">
-    <ng-content select="thead"></ng-content>
-    <tbody>
-      <template *ngFor="let record of records; trackBy: trackById" [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{record: record}"></template>
-    </tbody>
-    <ng-content select="tfoot"></ng-content>
-  </table>
-</div>
+<ng-template *ngFor="let record of records; trackBy: trackById" [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{record: record}"></ng-template>
