--- a/client/dashboard/patients/patient.component.scss
+++ b/client/dashboard/patients/patient.component.scss
@@ -9,6 +9,7 @@
   border-style: solid;
   border-radius: 50%;
   border-width: 4px;
+  background-size: cover;
 }
 
 .patient--priority_0 .patient__portrait {
