[#15] Websocket support for patient list updates

--- a/client/dashboard/patients/list.component.html
+++ b/client/dashboard/patients/list.component.html
@@ -1,10 +1,8 @@
 <router-outlet></router-outlet>
 <div [class.d-none]="route.firstChild">
-  <app-shared-list #list class="row" type="patients">
-    <ng-template let-record="record">
-      <div class="col-md-2">
-        <app-dashboard-patient [patient]="record" [routerLink]="['/patients', record.id]"></app-dashboard-patient>
-      </div>
-    </ng-template>
-  </app-shared-list>
+  <div class="row">
+    <div *ngFor="let record of records; trackBy: trackById" class="col-md-2">
+      <app-dashboard-patient [patient]="record" [routerLink]="['/patients', record.id]"></app-dashboard-patient>
+    </div>
+  </div>
 </div>
