--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <script type="text/javascript">
 window.env = {};
 window.env.ASSET_HOST = '<%= process.env.ASSET_HOST %>';
+window.env.GOOGLE_MAPS_API_KEY = '<%= process.env.GOOGLE_MAPS_API_KEY %>';
 </script>
 <%- contentFor('body') %>
 <app-dashboard>Loading...</app-dashboard>
