--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,7 @@
     <meta name="author" content="">
     <title><%= title %> - <%= process.env.APP_NAME %></title>
     <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="/stylesheets/home.css" />
     <script type="application/javascript" src="/libraries/jquery/jquery.min.js"></script>
     <script type="application/javascript" src="/libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
     <% if (locals.head) { %><%- head %><% } %>
