--- a/views/passwords/reset.ejs
+++ b/views/passwords/reset.ejs
@@ -1,21 +1,26 @@
-<%- contentFor('title') %>Reset your password
+<%- contentFor('title') %>Reset Password
+<%- contentFor('bodyClass') %>signed-out
 <%- contentFor('body') %>
-<div class="row justify-content-center" role="main">
-  <div class="col col-sm-6 col-lg-4 col-xl-3">
-    <h1 class="h2">Reset your password</h1>
-    <% if (isExpired) { %>
-      <p>Sorry, this password reset link has expired. <a href="/passwords/forgot">Request another?</a></p>
-    <% } else { %>
-      <p>Enter a new password for your account.</p>
-      <form method="post" action="/passwords/reset/<%= token %>">
-        <div class="form-group">
-          <label>New password</label>
-          <input type="password" class="form-control" name="password" />
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary btn-block" type="submit">Submit</button>
-        </div>
-      </form>
-    <% } %>
+<div class="container">
+  <div class="row justify-content-center" role="main">
+    <div class="col col-sm-10 col-md-8 col-lg-6">
+      <img class="logo" src="/images/logo352.png">
+      <div class="card">
+        <h1>Reset</h1>
+        <% if (isExpired) { %>
+          <p>Sorry, this password reset link has expired. <a href="/passwords/forgot">Request another?</a></p>
+        <% } else { %>
+          <p>Enter a new password for your account.</p>
+          <form method="post" action="/passwords/reset/<%= token %>">
+            <div class="form-group">
+              <input type="password" class="form-control" name="password" placeholder="New password"/>
+            </div>
+            <div class="form-group">
+              <button class="btn btn-primary btn-block" type="submit">Submit</button>
+            </div>
+          </form>
+        <% } %>
+      </div>
+    </div>
   </div>
 </div>
