--- a/views/login/new.ejs
+++ b/views/login/new.ejs
@@ -1,25 +1,29 @@
-<%- contentFor('title') %>Log in
+<%- contentFor('title') %>Login
+<%- contentFor('bodyClass') %>signed-out
 <%- contentFor('body') %>
-<div class="row justify-content-center" role="main">
-  <div class="col col-sm-6 col-lg-4 col-xl-3">
-    <h1 class="h2">Log in</h1>
-    <form method="post" action="/login">
-      <input type="hidden" name="redirectURI" value="<%= redirectURI %>" />
-      <div class="form-group">
-        <label>Email</label>
-        <input type="text" class="form-control" name="email" />
+<div class="container">
+  <div class="row justify-content-center" role="main">
+    <div class="col col-sm-10 col-md-8 col-lg-6">
+      <img class="logo" src="/images/logo352.png">
+      <div class="card">
+        <h1>Login</h1>
+        <form method="post" action="/login">
+          <input type="hidden" name="redirectURI" value="<%= redirectURI %>" />
+          <div class="form-group">
+            <input type="text" class="form-control" name="email" placeholder="Email"/>
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" name="password" placeholder="Password"/>
+            <div class="form-text text-right"><a href="/passwords/forgot">Forgot password?</a></div>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary btn-block" type="submit">Submit</button>
+          </div>
+          <div class="text-center">
+            <a href="/register?redirectURI=<%= encodeURIComponent(redirectURI || '/') %>">Create an Account</a>
+          </div>
+        </form>
       </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="form-control" name="password" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary btn-block" type="submit">Submit</button>
-      </div>
-      <div class="form-group text-center">
-        <a href="/passwords/forgot">Forgot your password?</a><br />
-        <a href="/register?redirectURI=<%= encodeURIComponent(redirectURI || '/') %>">Need an account?</a><br />
-      </div>
-    </form>
+    </div>
   </div>
 </div>
