--- a/views/passwords/forgot.ejs
+++ b/views/passwords/forgot.ejs
@@ -1,20 +1,25 @@
-<%- contentFor('title') %>Forgot your password?
+<%- contentFor('title') %>Forgot password?
+<%- contentFor('bodyClass') %>signed-out
 <%- contentFor('body') %>
-<div class="row justify-content-center" role="main">
-  <div class="col col-sm-6 col-lg-4 col-xl-3">
-    <h1 class="h2">Forgot your password?</h1>
-    <p>Enter the email address you registered to receive a reset password link.</p>
-    <form method="post" action="/passwords/forgot">
-      <div class="form-group">
-        <label>Email</label>
-        <input type="text" class="form-control" name="email" />
+<div class="container">
+  <div class="row justify-content-center" role="main">
+    <div class="col col-sm-10 col-md-8 col-lg-6">
+      <img class="logo" src="/images/logo352.png">
+      <div class="card">
+        <h1>Forgot?</h1>
+        <p>Enter the email address you registered with to receive a reset password link.</p>
+        <form method="post" action="/passwords/forgot">
+          <div class="form-group">
+            <input type="text" class="form-control" name="email" placeholder="Email" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary btn-block" type="submit">Submit</button>
+          </div>
+          <div class="form-group text-center">
+            <a href="/login">Back to Login...</a>
+          </div>
+        </form>
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary btn-block" type="submit">Submit</button>
-      </div>
-      <div class="form-group text-center">
-        <a href="/login">Back to login...</a>
-      </div>
-    </form>
+    </div>
   </div>
 </div>
