--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -8,7 +8,7 @@
     <title><%= title %> - <%= process.env.APP_NAME %></title>
     <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/libraries/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="/stylesheets/dashboard.css">
+    <link rel="stylesheet" href="/stylesheets/admin.css">
     <base href="/admin/">
     <script type="text/javascript">
     window.env = {};
