--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/libraries/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="/stylesheets/home.css" />
+    <link rel="stylesheet" href="/stylesheets/dashboard.css" />
     <script type="application/javascript" src="/libraries/jquery/jquery.min.js"></script>
     <script type="application/javascript" src="/libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
     <% if (locals.head) { %><%- head %><% } %>
