--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,167 +1,102 @@
+html, body {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+html {
+  height: 100%;
+}
+
+.toast-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 body {
-  font-size: .875rem;
+  background-color: #E5E5E5;
 }
 
-label {
-  font-weight: bold;
-  color: #333;
+body.signed-out {
+  background: linear-gradient(121.55deg, #C1DDD8 21.73%, #65B3DA 52.52%, #46A5DB 77.84%, #2F7EAA 97.61%) fixed;
+  min-height: 100%;
+  padding-bottom: 4rem;
 }
 
-td p:last-child {
-  margin-bottom: 0;
+body.signed-out .toast-container {
+  z-index: 1;
+  top: 40%;
+  right: 50%;
+  transform: translateX(50%);
 }
 
-.modal.show .modal-dialog {
-  top: 50%;
-  transform: translateY(-50%);
+body.signed-out .toast-body {
+  font-size: 1.25rem;
 }
 
-.feather {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
+body.signed-out .logo {
+  display: block;
+  width: 176px;
+  height: 176px;
+  margin: 54px auto 50px auto;
+  border-radius: 12px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.home-pano {
-  position: absolute;
-  left: 0;
-  right: 0;
-  background-color: black;
-  background-image: url('/images/home.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center bottom;
-  min-height: 300px;
+body.signed-out .card {
+  padding: 60px;
+  border: 0;
+  border-radius: 12px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 1.25rem;
 }
 
-.home-pano__caption {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, .7);
-}
-
-.home-pano__caption a {
-  color: #aaa;
-  font-size: 9px;
-  margin-left: 1em;
-  margin-right: 1em;
-}
-
-.home-properties {
-  min-height: 300px;
-}
-
-.home-circle {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
-  border: 4px solid #333;
+h1 {
+  font-size: 4rem;
+  font-weight: 800;
+  color: #46A5DB;
   text-align: center;
-  line-height: 90px;
-  font-size: 50px;
+  margin-bottom: 0.9375em;
 }
 
-/*
- * Sidebar
- */
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+a[href] {
+  color: #4F4F4F;
+  text-decoration: underline;
 }
 
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+a[href]:hover {
+  color: #46A5DB;
+  cursor: pointer;
 }
 
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
+a[tabindex] {
+  cursor: pointer;
 }
 
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
+body.signed-out .card .form-group {
+  margin-bottom: 1.5rem;
 }
 
-.sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
-  color: inherit;
-}
-
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
-}
-
-/*
- * Content
- */
-
-[role="main"] {
-  padding-top: 48px; /* Space for fixed navbar */
-}
-
-[role="main"] + [role="main"] {
-  padding-top: 0;
-}
-
-/*
- * Navbar
- */
-
-.navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 1rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}
-
-.navbar-icon {
-  width: auto;
-  height: 24px;
-  vertical-align: middle;
-}
-
-.navbar .form-control {
-  padding: .75rem 1rem;
-  border-width: 0;
+body.signed-out .card .form-control {
+  font-size: 1.375rem;
+  background-color: #E5ECEF;
+  border: 0;
   border-radius: 0;
+  color: #4F4F4F;
+  height: calc(1.5em + 3rem);
+  padding: 1.5rem .875rem;
 }
 
-.form-control-dark {
-  color: #fff;
-  background-color: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .1);
+body.signed-out .card .btn {
+  font-size: 1.75rem;
+  font-weight: 800;
+  height: calc(1.5em + 1.75rem);
+  padding: .875rem .875rem;
+  text-transform: uppercase;
+  border-radius: 500px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.form-control-dark:focus {
-  border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+body.signed-out .card .btn-primary {
+  background-color: #46A5DB;
+  border-color: #46A5DB;
 }
