--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,189 @@
-<%- contentFor('title') %>Home
-<%- contentFor('head') %>
-<base href="/">
-<script type="text/javascript">
-window.env = {};
-window.env.ASSET_HOST = '<%= process.env.ASSET_HOST %>';
-window.env.GOOGLE_MAPS_API_KEY = '<%= process.env.GOOGLE_MAPS_API_KEY %>';
-</script>
-<%- contentFor('body') %>
-<app-dashboard>Loading...</app-dashboard>
-<% for (let entry of ['dashboard']) { %>
-  <% for (let chunk of webpackStats.chunks[entry]) { %>
-    <script type="application/javascript" src="<%= chunk.publicPath %>"></script>
-  <% } %>
-<% } %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>NaT - SALT (Na) Triage Intelligent Assistant</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="/libraries/fontawesome/css/all.css" />
+    <link rel="stylesheet" href="/stylesheets/home.css" />
+    <script type="application/javascript" src="/libraries/jquery/jquery.min.js"></script>
+    <script type="application/javascript" src="/scripts/home.js"></script>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-md fixed-top top">
+        <div class="container">
+          <a class="navbar-brand" href="#home"><img src="/images/logo.png" alt="NaT" /></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="nav navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#solution">Our Solution</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#story">Our Story</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main role="main">
+      <section id="home">
+        <div class="container">
+          <div id="home__valprop">
+            <h1>Your calling is saving lives, we want to help you do it.</h1>
+            <p>NaT aims to improve the accuracy and efficiency of triage management during mass casualty incidents.</p>
+            <a class="btn btn-primary" href="#solution"><span id="home__cta">Our Solution <i class="fas fa-chevron-right"></span></i></a>
+          </div>
+        </div>
+        <div id="home__credit">Photo credit: Ilka Cole | VIRIN: 170928-F-GY014-009.JPG</div>
+      </section>
+      <section id="solution">
+        <div class="container">
+          <h2>Our Solution</h2>
+          <div class="row">
+            <div class="col-lg-5">
+              <h3>NaT is a MCI management system for EMS professionals.</h3>
+              <p>NaT is able to provide EMS professionals with simple patient data capture, efficient patient sorting, and standardized data transfer for continued care.</p>
+              <p>The mobile app allows for hands-free data capture and in-field updates while the web-based dashboard is dedicated to giving incident commanders a bird's-eye view of the entire scene.</p>
+            </div>
+            <div class="col-lg-6 offset-lg-1">
+              <img src="/images/home1.jpg" alt="NaT mobile app and web dashboard">
+            </div>
+          </div>
+          <h3>Hands-Free Data Capture</h3>
+          <div class="row">
+            <div class="col-lg-4">
+              <img src="/images/home2-1.jpg" alt="NaT mobile app QR code scanner">
+              <p class="caption">New patient entered through quick scan of QR code on tag</p>
+            </div>
+            <div class="col-lg-4">
+              <img src="/images/home2-2.png" alt="NaT mobile app entry form">
+              <p class="caption">Simple form pops-up based on tag scan</>
+            </div>
+            <div class="col-lg-4">
+              <img src="/images/home2-3.png" alt="NaT mobile app voice recorder">
+              <p class="caption">Observations can be recorded and form will fill using speech-to-text</p>
+            </div>
+          </div>
+          <h3>Efficient Patient Sorting</h3>
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="/images/home3-1.jpg" alt="NaT web dashboard sort view">
+              <p class="caption">Sort patients based on triage tag and get notified when new patients are added or when the status of an existing patient is updated</p>
+            </div>
+            <div class="col-lg-6">
+              <img src="/images/home3-2.jpg" alt="NaT web dashboard map view">
+              <p class="caption">View patients on map to identify highly impacted areas and direct resources accordingly</p>
+            </div>
+          </div>
+          <h3>Simplified Patient Data Management</h3>
+          <div class="row">
+            <div class="col-lg-4 offset-lg-2">
+              <img src="/images/home4-1.jpg" alt="NaT mobile app patient view">
+              <p class="caption">View patient data in user-friendly form</p>
+            </div>
+            <div class="col-lg-4">
+              <img src="/images/home4-2.jpg" alt="NaT mobile app transport form">
+              <p class="caption">Archive transported patients and send their data for continued care</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="story">
+        <div class="container">
+          <h2>Our Story</h2>
+          <h3>Dedicated to providing life saving efficiency.</h3>
+          <p>NaT was initially conceptualized in 2019 as part of the Tech to Protect Challenge, sponsored by NIST PSCR, aimed at fostering technological innovation for emergency responders.  The solution came out of a focus on a common pain point: time spent documenting injuries and incidents at the scene of mass casualty incidents.  These incidents are chaotic, high-pressure environments where time spent documenting can mean the difference between life and death.  The quick tag scan and speech-to-text form filling were the first features, but the solution quickly expanded to include a variety of powerful sorting and data export options to improve efficiency, both at the point of contact with the patient and also for the incident commander monitoring the entire scene.</p>
+          <div id="story__bios" class="row">
+            <div class="col-lg-3">
+              <img src="/images/home5-1.jpg" alt="Portrait of Francis Li">
+            </div>
+            <div class="col-lg-9">
+              <h4>Francis Li<span> | Software Architect</span></h4>
+              <p>Francis Li is the original creator of NaT and a full-stack software architect and interaction designer based in San Francisco. As a member of the volunteer <a href="https://codeforsanfrancisco.org">Code for San Francisco</a> brigade and on the Board of Directors for <a href="https://devmission.org">Dev/Mission</a> he advocates for community-based civic technology projects. <a href="https://www.linkedin.com/in/francisli/">LinkedIn Profile</a></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-3">
+              <img src="/images/home5-2.jpg" alt="Portrait of Britt Jensen">
+            </div>
+            <div class="col-lg-9">
+              <h4>Britt Jensen<span> | Designer & Researcher</span></h4>
+              <p>Britt Jensen joined the team in early 2020 to bring human-centred design and research to the product definition process.  She has years of experience working in design consulting and loves improving the user experience of products that will be used in high-stress, high stakes situations. <a href="https://www.linkedin.com/in/britt-jensen-10957164/">LinkedIn Profile</a></p>
+            </div>
+          </div>
+          <h3>Free. Open Source. Standards Based.</h3>
+          <p>NaT is being developed in the open as free software licensed under the GNU General Public License. Browse our <a href="https://github.com/natriage/">source code repositories</a> on GitHub.</p>
+        </div>
+      </section>
+      <section id="contact">
+        <div class="container">
+          <h2>Contact us</h2>
+          <h3>We would love to hear from you!</h3>
+          <p>We’re in the early stages of developing this product and are always looking for feedback from users.  If you’re interested in testing out the product or are just looking for more info, we would love to connect with you.</p>
+          <form class="row" method="post" action="/contact-us">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <div class="form-group col-md-6 col-lg-5 offset-lg-1">
+              <input required type="text" class="form-control" name="firstName" placeholder="First Name" />
+            </div>
+            <div class="form-group col-md-6 col-lg-5">
+              <input required type="text" class="form-control" name="lastName" placeholder="Last Name" />
+            </div>
+            <div class="form-group col-lg-10 offset-lg-1">
+              <input required type="email" class="form-control" name="email" placeholder="Email" />
+            </div>
+            <div class="form-group col-lg-10 offset-lg-1">
+              <textarea required class="form-control" name="message" placeholder="Message" rows="4"></textarea>
+            </div>
+            <div class="form-group col-lg-10 offset-lg-1">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="feedback" name="feedback" value="yes">
+                <label for="feedback" class="form-check-label">&nbsp;I'm interested in providing feedback on the product.</label>
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="pilot" name="pilot" value="yes">
+                <label for="pilot" class="form-check-label">&nbsp;I'm interested in being part of a pilot program.</label>
+              </div>
+            </div>
+            <div class="form-group col-lg-10 offset-lg-1">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+      </section><!-- /.container -->
+      <!-- FOOTER -->
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 order-md-2">
+              <ul>
+                <li><a href="#home"><b>Home</b></a></li>
+                <li><a href="#solution">Our Solution</a></li>
+                <li><a href="#story">Our Story</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="text-md-left col-md-4 order-md-1">
+              <img src="/images/logo.png" />
+              <div>Copyright &copy; 2020 NaT. All rights reserved.</div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </main>
+  </body>
+</html>
