--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/libraries/fontawesome/css/all.css" />
     <link rel="stylesheet" href="/stylesheets/home.css" />
+    <script type="application/javascript" src="/libraries/smoothscroll/smoothscroll.min.js"></script>
     <script type="application/javascript" src="/libraries/jquery/jquery.min.js"></script>
+    <script type="application/javascript" src="/libraries/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="/scripts/home.js"></script>
   </head>
   <body>
@@ -19,7 +21,7 @@
         <div class="container">
           <a class="navbar-brand" href="#home"><img src="/images/logo.png" alt="NaT" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="nav navbar-nav mr-auto">
