--- a/client/dashboard/patients/list.component.scss
+++ b/client/dashboard/patients/list.component.scss
@@ -43,6 +43,8 @@
   color: white;
   font-size: 1.5rem;
   padding: .875rem 2rem;
+  height: inherit;
+  line-height: inherit;
 }
 
 .show > .btn-secondary.dropdown-toggle:focus {
