--- a/client/dashboard/patients/show.component.html
+++ b/client/dashboard/patients/show.component.html
@@ -1,4 +1,4 @@
-<app-shared-form *ngIf="id" type="patients" [id]="id" [hideButtons]="true">
+<app-shared-form #form *ngIf="id" type="patients" [id]="id" [hideButtons]="true">
   <ng-template let-record="record" let-error="error">
     <div [class]="'modal d-block patient patient--' + PRIORITY_ARRAY[record.priority]" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl" role="document">
@@ -16,6 +16,12 @@
               <p><span class="patient__name">{{record.lastName}}, {{record.firstName}}</span><br />
               Last updated: {{record.updatedAt | relativeDate}}</p>
             </div>
+            <div class="btn-toolbar">
+              <!-- <button (click)="onEdit()" type="button" class="btn">
+                <i class="far fa-edit"></i>
+                <span>Edit Status</span>
+              </button> -->
+            </div>
           </div>
           <div class="modal-body">
             <div class="row">
@@ -24,10 +30,10 @@
                   <div class="card-header">Transport</div>
                   <div class="card-body">
                     <dl>
-                      <dt>Agency</dt>
+                      <dt><label for="transportAgency" class="col-form-label">Agency</label></dt>
                       <dd>{{record.transportAgency?.name}}</dd>
                       <div class="break"></div>
-                      <dt>Facility</dt>
+                      <dt><label for="transportFacility" class="col-form-label">Facility</label></dt>
                       <dd>{{record.transportFacility?.name}}</dd>
                     </dl>
                   </div>
@@ -36,11 +42,11 @@
                   <div class="card-header">Location</div>
                   <div class="card-body">
                     <dl>
-                      <dt>Location</dt>
-                      <dd>{{record.location}}</dd>
+                      <dt><label for="location" class="col-form-label">Location</label></dt>
+                      <dd><input id="location" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.location : record.location" (ngModelChange)="observation.location=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="location"></app-shared-clear></dd>
                       <div class="break"></div>
-                      <dt>GPS</dt>
-                      <dd><span *ngIf="record.lat && record.lng">{{record.lat}}, {{record.lng}}</span></dd>
+                      <dt><label for="lat" class="col-form-label">GPS</label></dt>
+                      <dd><span *ngIf="observation && observation.lat && observation.lng">{{observation.lat}}, {{observation.lng}}</span><span *ngIf="!observation && record.lat && record.lng">{{record.lat}}, {{record.lng}}</span><app-shared-clear *ngIf="observation" [object]="observation" propertyName="lat" (clear)="onClearLat()"></app-shared-clear></dd>
                     </dl>
                   </div>
                 </div>
@@ -48,14 +54,14 @@
                   <div class="card-header">Info</div>
                   <div class="card-body">
                     <dl>
-                      <dt>First name</dt>
-                      <dd>{{record.firstName}}</dd>
+                      <dt><label for="firstName" class="col-form-label">First name</label></dt>
+                      <dd><input id="firstName" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.firstName : record.firstName" (ngModelChange)="observation.firstName=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="firstName"></app-shared-clear></dd>
                       <div class="break"></div>
-                      <dt>Last name</dt>
-                      <dd>{{record.lastName}}</dd>
+                      <dt><label for="lastName" class="col-form-label">Last name</label></dt>
+                      <dd><input id="lastName" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.lastName : record.lastName" (ngModelChange)="observation.lastName=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="lastName"></app-shared-clear></dd>
                       <div class="break"></div>
-                      <dt>Age</dt>
-                      <dd>{{record.age}}</dd>
+                      <dt><label for="age" class="col-form-label">Age</label></dt>
+                      <dd><input id="age" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.age : record.age" (ngModelChange)="observation.age=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="age"></app-shared-clear></dd>
                     </dl>
                   </div>
                 </div>
@@ -63,17 +69,17 @@
                   <div class="card-header">Vitals</div>
                   <div class="card-body">
                     <dl>
-                      <dt>Respiratory Rate</dt>
-                      <dd>{{record.respiratoryRate}}</dd>
+                      <dt><label for="respiratoryRate" class="col-form-label">Respiratory Rate</label></dt>
+                      <dd><input id="respiratoryRate" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.respiratoryRate : record.respiratoryRate" (ngModelChange)="observation.respiratoryRate=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="respiratoryRate"></app-shared-clear></dd>
                       <div class="break"></div>
-                      <dt>Pulse</dt>
-                      <dd>{{record.pulse}}</dd>
+                      <dt><label for="pulse" class="col-form-label">Pulse</label></dt>
+                      <dd><input id="pulse" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.pulse : record.pulse" (ngModelChange)="observation.pulse=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="pulse"></app-shared-clear></dd>
                       <div class="break"></div>
-                      <dt>Capillary Refill</dt>
-                      <dd>{{record.capillaryRefill}}</dd>
+                      <dt><label for="capillaryRefill" class="col-form-label">Capillary Refill</label></dt>
+                      <dd><input id="capillaryRefill" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.capillaryRefill : record.capillaryRefill" (ngModelChange)="observation.capillaryRefill=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="capillaryRefill"></app-shared-clear></dd>
                       <div class="break"></div>
-                      <dt>Blood Pressure</dt>
-                      <dd>{{record.bloodPressure}}</dd>
+                      <dt><label for="bloodPressure" class="col-form-label">Blood Pressure</label></dt>
+                      <dd><input id="bloodPressure" type="text" [class.form-control]="observation" [readonly]="!observation" [class.form-control-plaintext]="!observation" [ngModel]="observation ? observation.bloodPressure : record.bloodPressure" (ngModelChange)="observation.bloodPressure=$event" /><app-shared-clear *ngIf="observation" [object]="observation" propertyName="bloodPressure"></app-shared-clear></dd>
                     </dl>
                   </div>
                 </div>
@@ -99,6 +105,19 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div *ngIf="!observation" class="btn-toolbar">
+              <button (click)="onUpdate(record)" type="button" class="btn btn-primary">
+                <i class="far fa-edit"></i> Update
+              </button>
+            </div>
+            <div *ngIf="observation" class="btn-toolbar">
+              <button (click)="onSave(record)" type="button" class="btn btn-primary">
+                <i class="far fa-save"></i> Save
+              </button>
+              <button (click)="onCancel()" type="button" class="btn btn-secondary">
+                <i class="fas fa-times"></i> Cancel
+              </button>
             </div>
           </div>
         </div>
