--- a/client/dashboard/patients/show.component.scss
+++ b/client/dashboard/patients/show.component.scss
@@ -27,15 +27,60 @@
   display: block;
   border-radius: 0;
   height: 11.125rem;
+
+  h1 {
+    margin: -1rem;
+    padding-top: 2.25rem;
+    padding-left: 12.625rem;
+    height: 5.5rem;
+    font-size: 2.25rem;
+    text-align: left;
+  }
+
+  .btn-toolbar {
+    position: absolute;
+    top: .75rem;
+    right: 1.5rem;
+  }
+
+  .btn {
+    background-color: #F5F7F9;
+    width: 4.5rem;
+    height: 4rem;
+    font-size: .75rem;
+    color: #46A5DB;
+    padding: 0;
+    border-radius: 0.5rem;
+    i {
+      display: block;
+      background-color: #E5ECEF;
+      height: 2.5rem;
+      line-height: 2.25rem;
+      font-size: 1.75rem;
+      border-top-left-radius: 0.5rem;
+      border-top-right-radius: 0.5rem;
+      border-top: .125rem solid #F5F7F9;
+      border-left: .125rem solid #F5F7F9;
+      border-right: .125rem solid #F5F7F9;
+    }
+    span {
+      display: block;
+      height: 1.5rem;
+      line-height: 1.5rem;
+    }
+  }
 }
 
-.modal-header h1 {
-  margin: -1rem;
-  padding-top: 2.25rem;
-  padding-left: 12.625rem;
-  height: 5.5rem;
-  font-size: 2.25rem;
-  text-align: left;
+.modal-body {
+  .btn-toolbar {
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
+
+    &> .btn + .btn {
+      margin-left: .5rem;
+    }
+  }
 }
 
 .patient__data {
@@ -136,6 +181,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     margin: 0;
   }
   dt, dd {
@@ -146,9 +192,16 @@
     color: #BDBDBD;
   }
   dd {
-    text-align: right;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
     color: #4F4F4F;
     margin: 0;
+    app-shared-clear {
+      width: 2rem;
+      margin-left: .25rem;
+      flex-shrink: 0;
+    }
   }
   .break {
     flex-basis: 100%;
@@ -173,4 +226,9 @@
   position: absolute;
   right: 1rem;
   font-size: 1.5rem;
+}
+
+input {
+  text-align: right;
+  color: #4F4F4F;
 }
