--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -58,6 +58,14 @@ h1 {
   margin-bottom: 0.9375em;
 }
 
+a {
+  color: #46A5DB;
+}
+
+a:hover {
+  color: #2F7EAA;
+}
+
 a[href] {
   color: #4F4F4F;
   text-decoration: underline;
@@ -86,6 +94,17 @@ body.signed-out .card .form-control {
   padding: 1.5rem .875rem;
 }
 
+.btn {
+  font-size: 1.125rem;
+  line-height: 1;
+  height: 2.375rem;
+  padding: .625rem 1.5rem;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 500px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 body.signed-out .card .btn {
   font-size: 1.75rem;
   font-weight: 800;
@@ -96,7 +115,17 @@ body.signed-out .card .btn {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-body.signed-out .card .btn-primary {
+.btn-primary {
   background-color: #46A5DB;
   border-color: #46A5DB;
+}
+
+.btn-primary:hover {
+  background-color: #46A5DB;
+  border-color: #46A5DB;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active {
+  background-color: #2F7EAA;
+  border-color: #2F7EAA;
 }
